tests/rosetta/out/Java/arithmetic-rational.error
javac error: exit status 1
/tmp/TestMochiToJavaarithmetic-rational2206531635/001/ArithmeticRational.java:17: error: incompatible types: possible lossy conversion from double to int
                return mid;
                       ^
1 error
